required changes for users to migrate from one version of MITAB to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the CVS log comments.


CHANGES - Current Version:
--------------------------

- Fixed bug: MITAB doesn't support writing DateTime type (bug 1948)

- Fixed bug with the characters ",\n in the tab2tab application. (bug 
  1945)
 
- mitab.h: Export MITABSpatialRef2CoordSys() and MITABCoordSys2SpatialRef()
  from the DLL.  Mostly for use in GDAL 


Version 2.0-dev (CVS)
---------------------

- IMPORTANT - BACKWARDS-INCOMPATIBLE CHANGE:
  OGRLayer::SetFeature() is intended to be used only in random write mode.
  However, MITAB 1.x had a poorly named SetFeature() that was really doing
  the job of OGRLayer::CreateFeature(). In order to implement random write
  support through OGRLayer::SetFeature() in a way that is consistent with 
  the OGRLayer methods, we had to fix this error from the early MITAB days.

  In MITAB 2.x, we have replaced the old SetFeature() with a CreateFeature(),
  and a new SetFeature() has been added that's in line with the 
  OGRLayer::SetFeature() signature and behavior.
  Application code that was writing features using SetFeature() with 
  MITAB 1.x will need to be changed to use CreateFeature() with MITAB 2.x. 

  Note that the return value of CreateFeature() is an OGRErr code and not
  a feature id as was the case with the MITAB 1.x SetFeature() implementation.
  The feature id of the created feature is returned by updating the id of the
  passed in feature instead of through the return value of the method as
  was the case with the old SetFeature() method in MITAB 1.x.

- Added Visual Studio Project files in contrib/vcproj, contributed by 
  Tony Wells (bug 1877)

- Updated contrib/mitab_dyn.pas and contrib/mitab.vb for V1.7.0 changes
